--- a/src/styles/buttons/_fab-button.scss
+++ b/src/styles/buttons/_fab-button.scss
@@ -1,4 +1,4 @@
-.kr-fab-btn {
+.kr-fab-button {
   align-items: center;
   border-radius: $icon-button-size;
   display: inline-flex;
@@ -9,6 +9,6 @@
   width: $icon-button-size;
 }
 
-.kr-fab-btn.kr-outline-btn {
+.kr-fab-button.kr-outline-button {
   vertical-align: bottom;
 }
