Styles dropdown buttons

--- a/src/app/modules/shared/button-dropdown/button-dropdown.component.html
+++ b/src/app/modules/shared/button-dropdown/button-dropdown.component.html
@@ -1,2 +1,6 @@
-<button krOutlineButton>{{title}}</button>
-<div class="kr-button-dropdown"></div>
+<div>
+  <button krOutlineButton>{{label}}</button>
+</div>
+<div class="kr-button-dropdown-list">
+  <ng-content></ng-content>
+</div>
