--- a/src/app/modules/showcase/buttons/buttons.component.html
+++ b/src/app/modules/showcase/buttons/buttons.component.html
@@ -120,6 +120,27 @@
   <a mat-mini-fab routerLink="/">Link</a>
 </div>
 
+<h2>Dropdowns</h2>
+
+<h3>Basic Dropdown Button</h3>
+<div>
+  <kr-button-dropdown label="Dropdown">
+    <button krDropdownItem>Item 1</button>
+    <button krDropdownItem>Item 2</button>
+    <button krDropdownItem>Item 3</button>
+  </kr-button-dropdown>
+  <kr-button-dropdown label="Dropdown w/ Split" color="primary" split>
+    <button krDropdownItem>Item 1</button>
+    <button krDropdownItem>Item 2</button>
+    <button krDropdownItem>Item 3</button>
+  </kr-button-dropdown>
+  <kr-button-dropdown label="Accent" color="accent">
+    <button krDropdownItem>Item 1</button>
+    <button krDropdownItem>Item 2</button>
+    <button krDropdownItem>Item 3</button>
+  </kr-button-dropdown>
+</div>
+
 <h2>Button Groups</h2>
 
 <h3>Button Toggle Group - Angular Material</h3>
@@ -182,13 +203,4 @@
     <mat-icon aria-label="Example icon-button with a whats hot icon">whatshot</mat-icon>
   </button>
   <a krOutlineButton routerLink="/" color="accent">Link</a>
-</div>
-
-<h3>Dropdown Button</h3>
-<div>
-  <kr-button-dropdown label="Dropdown">
-    <button krDropdownItem>Item 1</button>
-    <button krDropdownItem>Item 2</button>
-    <button krDropdownItem>Item 3</button>
-  </kr-button-dropdown>
 </div>
