--- a/src/app/modules/showcase/buttons/buttons.component.html
+++ b/src/app/modules/showcase/buttons/buttons.component.html
@@ -122,11 +122,12 @@
 
 <h2>Dropdowns</h2>
 
-<h3>Basic Dropdown Button</h3>
+<h3>Outline Dropdown Button</h3>
 <div>
   <kr-button-dropdown label="Dropdown">
     <button krDropdownItem>Item 1</button>
     <button krDropdownItem>Item 2</button>
+    <hr />
     <button krDropdownItem>Item 3</button>
   </kr-button-dropdown>
   <kr-button-dropdown label="Dropdown w/ Split" color="primary" split>
