--- a/src/app/modules/showcase/buttons/buttons.component.html
+++ b/src/app/modules/showcase/buttons/buttons.component.html
@@ -122,7 +122,7 @@
 
 <h2>Dropdowns</h2>
 
-<h3>Outline Dropdown Button</h3>
+<h3>Raised Dropdown Button</h3>
 <div>
   <kr-button-dropdown label="Dropdown">
     <button krDropdownItem>Item 1</button>
@@ -140,6 +140,26 @@
     <button krDropdownItem>Item 2</button>
     <button krDropdownItem>Item 3</button>
   </kr-button-dropdown>
+</div>
+
+<h3>Outline Dropdown Button</h3>
+<div>
+  <kr-outline-button-dropdown label="Dropdown">
+    <button krDropdownItem>Item 1</button>
+    <button krDropdownItem>Item 2</button>
+    <hr />
+    <button krDropdownItem>Item 3</button>
+  </kr-outline-button-dropdown>
+  <kr-outline-button-dropdown label="Dropdown w/ Split" color="primary" split>
+    <button krDropdownItem>Item 1</button>
+    <button krDropdownItem>Item 2</button>
+    <button krDropdownItem>Item 3</button>
+  </kr-outline-button-dropdown>
+  <kr-outline-button-dropdown label="Accent" color="accent">
+    <button krDropdownItem>Item 1</button>
+    <button krDropdownItem>Item 2</button>
+    <button krDropdownItem>Item 3</button>
+  </kr-outline-button-dropdown>
 </div>
 
 <h2>Button Groups</h2>
