--- a/src/app/modules/showcase/buttons/buttons.component.html
+++ b/src/app/modules/showcase/buttons/buttons.component.html
@@ -120,9 +120,9 @@
   <a mat-mini-fab routerLink="/">Link</a>
 </div>
 
-<h2>Dropdowns</h2>
+<h2>Flyouts</h2>
 
-<h3>Raised Dropdown Button</h3>
+<h3>Raised Button Dropdown</h3>
 <div>
   <kr-button-dropdown label="Dropdown">
     <button krDropdownItem>Item 1</button>
@@ -142,7 +142,7 @@
   </kr-button-dropdown>
 </div>
 
-<h3>Outline Dropdown Button</h3>
+<h3>Outline Button Dropdown</h3>
 <div>
   <kr-outline-button-dropdown label="Dropdown">
     <button krDropdownItem>Item 1</button>
@@ -160,6 +160,26 @@
     <button krDropdownItem>Item 2</button>
     <button krDropdownItem>Item 3</button>
   </kr-outline-button-dropdown>
+</div>
+
+<h3>Raised Button Flyup</h3>
+<div>
+  <kr-button-flyup label="Dropdown">
+    <button krDropdownItem>Item 1</button>
+    <button krDropdownItem>Item 2</button>
+    <hr />
+    <button krDropdownItem>Item 3</button>
+  </kr-button-flyup>
+  <kr-button-flyup label="Dropdown w/ Split" color="primary" split>
+    <button krDropdownItem>Item 1</button>
+    <button krDropdownItem>Item 2</button>
+    <button krDropdownItem>Item 3</button>
+  </kr-button-flyup>
+  <kr-button-flyup label="Accent" color="accent">
+    <button krDropdownItem>Item 1</button>
+    <button krDropdownItem>Item 2</button>
+    <button krDropdownItem>Item 3</button>
+  </kr-button-flyup>
 </div>
 
 <h2>Button Groups</h2>
