--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -2,6 +2,7 @@
 @import '../themes/deeporange-teal.theme.scss';
 
 // Buttons
+$button-height: 36px;
 $icon-button-size: 56px;
 
 // Material Defaults
