--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -1,5 +1,5 @@
 @import 'buttons/_base-button.scss';
-@import 'buttons/_dropdown-button.scss';
+@import 'buttons/_flyout-button.scss';
 @import 'buttons/_outline-button.scss';
 @import 'buttons/_button-group.scss';
 @import 'buttons/_fab-button.scss';
