--- a/src/app/modules/showcase/buttons/buttons.component.html
+++ b/src/app/modules/showcase/buttons/buttons.component.html
@@ -182,6 +182,26 @@
   </kr-button-flyup>
 </div>
 
+<h3>Raised Outline Button Flyup</h3>
+<div>
+  <kr-outline-button-flyup label="Dropdown">
+    <button krDropdownItem>Item 1</button>
+    <button krDropdownItem>Item 2</button>
+    <hr />
+    <button krDropdownItem>Item 3</button>
+  </kr-outline-button-flyup>
+  <kr-outline-button-flyup label="Dropdown w/ Split" color="primary" split>
+    <button krDropdownItem>Item 1</button>
+    <button krDropdownItem>Item 2</button>
+    <button krDropdownItem>Item 3</button>
+  </kr-outline-button-flyup>
+  <kr-outline-button-flyup label="Accent" color="accent">
+    <button krDropdownItem>Item 1</button>
+    <button krDropdownItem>Item 2</button>
+    <button krDropdownItem>Item 3</button>
+  </kr-outline-button-flyup>
+</div>
+
 <h2>Button Groups</h2>
 
 <h3>Button Toggle Group - Angular Material</h3>
