--- a/src/styles/buttons/_outline-button.scss
+++ b/src/styles/buttons/_outline-button.scss
@@ -1,7 +1,7 @@
 .kr-outline-button {
   border: 2px solid black;
   line-height: 32px;
-  padding: 0px 16px;
+  padding: 0px 5px 0px 16px;
 
   &:disabled {
     border-color: rgba(0,0,0,.42);
