--- a/src/app/modules/shared/button-flyup/button-flyup.component.html
+++ b/src/app/modules/shared/button-flyup/button-flyup.component.html
@@ -1,6 +1,11 @@
 <div class="kr-button-flyout">
-  <div class="kr-button-flyout-list kr-flyout" [@toggleFlyout]="isExpanded">
-    <ng-content></ng-content>
+  <div [@toggleFlyout]="isExpanded" class="kr-button-flyout-list kr-flyup" [ngClass]="{ 'has-caret': hasCaret }">
+    <div class="kr-button-flyout-content">
+      <ng-content></ng-content>
+    </div>
+    <div class="caret-mask" *ngIf="hasCaret">
+      <div class="caret"></div>
+    </div>
   </div>
   <div>
     <button mat-raised-button [color]="color" class="kr-flyout-label" [ngClass]="{ split: isSplit }" (mousedown)="isExpanded = !isExpanded">
