--- a/src/app/modules/shared/outline-button-flyup/outline-button-flyup.component.html
+++ b/src/app/modules/shared/outline-button-flyup/outline-button-flyup.component.html
@@ -1,6 +1,8 @@
 <div class="kr-button-flyout">
-  <div class="kr-button-flyout-list kr-flyout" [@toggleFlyout]="isExpanded">
-    <ng-content></ng-content>
+  <div [@toggleFlyout]="isExpanded" class="kr-button-flyout-list kr-flyup" [ngClass]="{ 'has-caret': hasCaret }">
+    <div class="kr-button-flyout-content">
+      <ng-content></ng-content>
+    </div>
   </div>
   <div>
     <button krOutlineButton [color]="color" class="kr-flyout-label" [ngClass]="{ split: isSplit }" (mousedown)="isExpanded = !isExpanded">
