--- a/src/app/modules/shared/outline-button-dropdown/outline-button-dropdown.component.html
+++ b/src/app/modules/shared/outline-button-dropdown/outline-button-dropdown.component.html
@@ -5,8 +5,10 @@
         <mat-icon>arrow_drop_down</mat-icon>
       </button>
     </div>
-    <div class="kr-button-flyout-list" [@toggleFlyout]="isExpanded">
-      <ng-content></ng-content>
+    <div [@toggleFlyout]="isExpanded" class="kr-button-flyout-list" [ngClass]="{ 'has-caret': hasCaret }">
+      <div class="kr-button-flyout-content">
+        <ng-content></ng-content>
+      </div>
     </div>
   </div>
   
