--- a/src/app/modules/showcase/buttons/buttons.component.html
+++ b/src/app/modules/showcase/buttons/buttons.component.html
@@ -142,26 +142,6 @@
   </kr-button-dropdown>
 </div>
 
-<h3>Outline Button Dropdown</h3>
-<div>
-  <kr-outline-button-dropdown label="Dropdown">
-    <button krDropdownItem>Item 1</button>
-    <button krDropdownItem>Item 2</button>
-    <hr />
-    <button krDropdownItem>Item 3</button>
-  </kr-outline-button-dropdown>
-  <kr-outline-button-dropdown label="Dropdown w/ Split" color="primary" split>
-    <button krDropdownItem>Item 1</button>
-    <button krDropdownItem>Item 2</button>
-    <button krDropdownItem>Item 3</button>
-  </kr-outline-button-dropdown>
-  <kr-outline-button-dropdown label="Accent" color="accent">
-    <button krDropdownItem>Item 1</button>
-    <button krDropdownItem>Item 2</button>
-    <button krDropdownItem>Item 3</button>
-  </kr-outline-button-dropdown>
-</div>
-
 <h3>Raised Button Flyup</h3>
 <div>
   <kr-button-flyup label="Dropdown">
@@ -180,6 +160,46 @@
     <button krDropdownItem>Item 2</button>
     <button krDropdownItem>Item 3</button>
   </kr-button-flyup>
+</div>
+
+<h3>Raised Button Flyup W/ Caret</h3>
+<div>
+  <kr-button-flyup caret label="Dropdown">
+    <button krDropdownItem>Item 1</button>
+    <button krDropdownItem>Item 2</button>
+    <hr />
+    <button krDropdownItem>Item 3</button>
+  </kr-button-flyup>
+  <kr-button-flyup caret label="Dropdown w/ Split" color="primary" split>
+    <button krDropdownItem>Item 1</button>
+    <button krDropdownItem>Item 2</button>
+    <button krDropdownItem>Item 3</button>
+  </kr-button-flyup>
+  <kr-button-flyup caret label="Accent" color="accent">
+    <button krDropdownItem>Item 1</button>
+    <button krDropdownItem>Item 2</button>
+    <button krDropdownItem>Item 3</button>
+  </kr-button-flyup>
+</div>
+
+<h3>Outline Button Dropdown</h3>
+<div>
+  <kr-outline-button-dropdown label="Dropdown">
+    <button krDropdownItem>Item 1</button>
+    <button krDropdownItem>Item 2</button>
+    <hr />
+    <button krDropdownItem>Item 3</button>
+  </kr-outline-button-dropdown>
+  <kr-outline-button-dropdown label="Dropdown w/ Split" color="primary" split>
+    <button krDropdownItem>Item 1</button>
+    <button krDropdownItem>Item 2</button>
+    <button krDropdownItem>Item 3</button>
+  </kr-outline-button-dropdown>
+  <kr-outline-button-dropdown label="Accent" color="accent">
+    <button krDropdownItem>Item 1</button>
+    <button krDropdownItem>Item 2</button>
+    <button krDropdownItem>Item 3</button>
+  </kr-outline-button-dropdown>
 </div>
 
 <h3>Raised Outline Button Flyup</h3>
