--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -6,6 +6,7 @@ $button-height: 36px;
 $icon-button-size: 56px;
 
 // Material Defaults
+$box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
 $icon-font-size: 24px;
 
 // Theme
