Adds caret to outline button flyup

--- a/src/app/modules/shared/outline-button-flyup/outline-button-flyup.component.html
+++ b/src/app/modules/shared/outline-button-flyup/outline-button-flyup.component.html
@@ -3,6 +3,9 @@
     <div class="kr-button-flyout-content">
       <ng-content></ng-content>
     </div>
+    <div class="caret-mask" *ngIf="hasCaret">
+      <div class="caret"></div>
+    </div>
   </div>
   <div>
     <button krOutlineButton [color]="color" class="kr-flyout-label" [ngClass]="{ split: isSplit }" (mousedown)="isExpanded = !isExpanded">
