--- a/src/app/modules/showcase/buttons/buttons.component.html
+++ b/src/app/modules/showcase/buttons/buttons.component.html
@@ -162,6 +162,26 @@
   </kr-button-flyup>
 </div>
 
+<!-- <h3>Raised Button Dropdown W/ Caret</h3>
+<div>
+  <kr-button-dropdown caret label="Dropdown">
+    <button krDropdownItem>Item 1</button>
+    <button krDropdownItem>Item 2</button>
+    <hr />
+    <button krDropdownItem>Item 3</button>
+  </kr-button-dropdown>
+  <kr-button-dropdown caret label="Dropdown w/ Split" color="primary" split>
+    <button krDropdownItem>Item 1</button>
+    <button krDropdownItem>Item 2</button>
+    <button krDropdownItem>Item 3</button>
+  </kr-button-dropdown>
+  <kr-button-dropdown caret label="Accent" color="accent">
+    <button krDropdownItem>Item 1</button>
+    <button krDropdownItem>Item 2</button>
+    <button krDropdownItem>Item 3</button>
+  </kr-button-dropdown>
+</div> -->
+
 <h3>Raised Button Flyup W/ Caret</h3>
 <div>
   <kr-button-flyup caret label="Dropdown">
@@ -216,6 +236,26 @@
     <button krDropdownItem>Item 3</button>
   </kr-outline-button-flyup>
   <kr-outline-button-flyup label="Accent" color="accent">
+    <button krDropdownItem>Item 1</button>
+    <button krDropdownItem>Item 2</button>
+    <button krDropdownItem>Item 3</button>
+  </kr-outline-button-flyup>
+</div>
+
+<h3>Raised Outline Button Flyup /W Caret</h3>
+<div>
+  <kr-outline-button-flyup caret label="Dropdown">
+    <button krDropdownItem>Item 1</button>
+    <button krDropdownItem>Item 2</button>
+    <hr />
+    <button krDropdownItem>Item 3</button>
+  </kr-outline-button-flyup>
+  <kr-outline-button-flyup caret label="Dropdown w/ Split" color="primary" split>
+    <button krDropdownItem>Item 1</button>
+    <button krDropdownItem>Item 2</button>
+    <button krDropdownItem>Item 3</button>
+  </kr-outline-button-flyup>
+  <kr-outline-button-flyup caret label="Accent" color="accent">
     <button krDropdownItem>Item 1</button>
     <button krDropdownItem>Item 2</button>
     <button krDropdownItem>Item 3</button>
