Adds caret for raised button dropdown

--- a/src/app/modules/showcase/buttons/buttons.component.html
+++ b/src/app/modules/showcase/buttons/buttons.component.html
@@ -162,7 +162,7 @@
   </kr-button-flyup>
 </div>
 
-<!-- <h3>Raised Button Dropdown W/ Caret</h3>
+<h3>Raised Button Dropdown W/ Caret</h3>
 <div>
   <kr-button-dropdown caret label="Dropdown">
     <button krDropdownItem>Item 1</button>
@@ -180,7 +180,7 @@
     <button krDropdownItem>Item 2</button>
     <button krDropdownItem>Item 3</button>
   </kr-button-dropdown>
-</div> -->
+</div>
 
 <h3>Raised Button Flyup W/ Caret</h3>
 <div>
