--- a/src/app/modules/shared/button-dropdown/button-dropdown.component.html
+++ b/src/app/modules/shared/button-dropdown/button-dropdown.component.html
@@ -5,8 +5,10 @@
       <mat-icon>arrow_drop_down</mat-icon>
     </button>
   </div>
-  <i class="material-icons caret" *ngIf="hasCaret">arrow_drop_down</i>
   <div [@toggleFlyout]="isExpanded" class="kr-button-flyout-list" [ngClass]="{ 'has-caret': hasCaret }">
+    <div class="caret-mask" *ngIf="hasCaret">
+      <div class="caret"></div>
+    </div>
     <div class="kr-button-flyout-content">
       <ng-content></ng-content>
     </div>
