Adds caret to outline button dropdown

--- a/src/app/modules/showcase/buttons/buttons.component.html
+++ b/src/app/modules/showcase/buttons/buttons.component.html
@@ -242,6 +242,26 @@
   </kr-outline-button-flyup>
 </div>
 
+<h3>Outline Button Dropdown W/ Caret</h3>
+<div>
+  <kr-outline-button-dropdown caret label="Dropdown">
+    <button krDropdownItem>Item 1</button>
+    <button krDropdownItem>Item 2</button>
+    <hr />
+    <button krDropdownItem>Item 3</button>
+  </kr-outline-button-dropdown>
+  <kr-outline-button-dropdown caret label="Dropdown w/ Split" color="primary" split>
+    <button krDropdownItem>Item 1</button>
+    <button krDropdownItem>Item 2</button>
+    <button krDropdownItem>Item 3</button>
+  </kr-outline-button-dropdown>
+  <kr-outline-button-dropdown caret label="Accent" color="accent">
+    <button krDropdownItem>Item 1</button>
+    <button krDropdownItem>Item 2</button>
+    <button krDropdownItem>Item 3</button>
+  </kr-outline-button-dropdown>
+</div>
+
 <h3>Raised Outline Button Flyup /W Caret</h3>
 <div>
   <kr-outline-button-flyup caret label="Dropdown">
