--- a/src/app/modules/shared/outline-button-dropdown/outline-button-dropdown.component.html
+++ b/src/app/modules/shared/outline-button-dropdown/outline-button-dropdown.component.html
@@ -6,6 +6,9 @@
       </button>
     </div>
     <div [@toggleFlyout]="isExpanded" class="kr-button-flyout-list" [ngClass]="{ 'has-caret': hasCaret }">
+      <div class="caret-mask" *ngIf="hasCaret">
+        <div class="caret"></div>
+      </div>
       <div class="kr-button-flyout-content">
         <ng-content></ng-content>
       </div>
