Adds support for aliging the caret for flyouts

--- a/src/app/modules/shared/button-flyup/button-flyup.component.html
+++ b/src/app/modules/shared/button-flyup/button-flyup.component.html
@@ -3,7 +3,7 @@
     <div class="kr-button-flyout-content">
       <ng-content></ng-content>
     </div>
-    <div class="caret-mask" *ngIf="hasCaret">
+    <div class="caret-mask" [ngClass]="{ center: alignedCenter, right: alignedRight }" *ngIf="hasCaret">
       <div class="caret"></div>
     </div>
   </div>
