--- a/src/app/modules/showcase/buttons/buttons.component.html
+++ b/src/app/modules/showcase/buttons/buttons.component.html
@@ -170,12 +170,12 @@
     <hr />
     <button krDropdownItem>Item 3</button>
   </kr-button-dropdown>
-  <kr-button-dropdown caret label="Dropdown w/ Split" color="primary" split>
+  <kr-button-dropdown caret [align]="align.Center" label="Dropdown w/ Split" color="primary" split>
     <button krDropdownItem>Item 1</button>
     <button krDropdownItem>Item 2</button>
     <button krDropdownItem>Item 3</button>
   </kr-button-dropdown>
-  <kr-button-dropdown caret label="Accent" color="accent">
+  <kr-button-dropdown caret [align]="align.Right" label="Accent" color="accent">
     <button krDropdownItem>Item 1</button>
     <button krDropdownItem>Item 2</button>
     <button krDropdownItem>Item 3</button>
@@ -190,12 +190,12 @@
     <hr />
     <button krDropdownItem>Item 3</button>
   </kr-button-flyup>
-  <kr-button-flyup caret label="Dropdown w/ Split" color="primary" split>
+  <kr-button-flyup caret [align]="align.Center" label="Dropdown w/ Split" color="primary" split>
     <button krDropdownItem>Item 1</button>
     <button krDropdownItem>Item 2</button>
     <button krDropdownItem>Item 3</button>
   </kr-button-flyup>
-  <kr-button-flyup caret label="Accent" color="accent">
+  <kr-button-flyup caret [align]="align.Right" label="Accent" color="accent">
     <button krDropdownItem>Item 1</button>
     <button krDropdownItem>Item 2</button>
     <button krDropdownItem>Item 3</button>
@@ -250,12 +250,12 @@
     <hr />
     <button krDropdownItem>Item 3</button>
   </kr-outline-button-dropdown>
-  <kr-outline-button-dropdown caret label="Dropdown w/ Split" color="primary" split>
+  <kr-outline-button-dropdown caret [align]="align.Center" label="Dropdown w/ Split" color="primary" split>
     <button krDropdownItem>Item 1</button>
     <button krDropdownItem>Item 2</button>
     <button krDropdownItem>Item 3</button>
   </kr-outline-button-dropdown>
-  <kr-outline-button-dropdown caret label="Accent" color="accent">
+  <kr-outline-button-dropdown caret [align]="align.Right" label="Accent" color="accent">
     <button krDropdownItem>Item 1</button>
     <button krDropdownItem>Item 2</button>
     <button krDropdownItem>Item 3</button>
@@ -270,12 +270,12 @@
     <hr />
     <button krDropdownItem>Item 3</button>
   </kr-outline-button-flyup>
-  <kr-outline-button-flyup caret label="Dropdown w/ Split" color="primary" split>
+  <kr-outline-button-flyup caret [align]="align.Center" label="Dropdown w/ Split" color="primary" split>
     <button krDropdownItem>Item 1</button>
     <button krDropdownItem>Item 2</button>
     <button krDropdownItem>Item 3</button>
   </kr-outline-button-flyup>
-  <kr-outline-button-flyup caret label="Accent" color="accent">
+  <kr-outline-button-flyup caret [align]="align.Right" label="Accent" color="accent">
     <button krDropdownItem>Item 1</button>
     <button krDropdownItem>Item 2</button>
     <button krDropdownItem>Item 3</button>
